Slightly revise transformation related schemas and descriptions.
